# volkit

./: .bumpversion.toml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  getting-started.md  index.md
docs/_static/: custom.css
docs/api/: datasets.md  estimate.md  future.md  implied.md  index.md  pricing.md  utils.md
docs/examples/: arb_prices_single_expiry.ipynb  broadcasting.ipynb  estimate_future_from_option_prices.ipynb  estimate_future_from_option_quotes.ipynb  estimate_vol_from_option_prices.ipynb  greeks_demo.ipynb  greeks_demo_.ipynb  greeks_surfaces.ipynb  implied_future.ipynb  implied_future_from_prices.ipynb  implied_future_from_quotes.ipynb  implied_vol.ipynb  spxw_dataset.ipynb  strikes_table.ipynb  strikes_table_with_greeks.ipynb
tests/: test_all_arb_prices_single_expiry.py  test_black_references.py  test_broadcast.py  test_discount_to_rate.py  test_future_broadcast.py  test_greeks_numerical.py  test_implied_future.py  test_implied_future_from_option_prices.py  test_iv.py  test_iv_and_utils.py  test_loader_spxw.py  test_rate_to_discount.py  test_utils.py
tools/: normalize_notebooks.py
volkit/: __init__.py  future.py
volkit/arb/: __init__.py  prices_single_expiry.py  report.py
volkit/data/: spxw.csv
volkit/datasets/: __init__.py  loader_spxw.py  spxw.csv
volkit/estimate/: __init__.py  future_from_option_prices.py  future_from_option_prices_plot.py  future_from_option_quotes.py  future_from_option_quotes_plot.py  (+2 more)
(+13 files in other folders)
