[tool.poetry]
name = "volkit"
version = "0.2.0"
description = "Volatility Modelling Toolkit"
authors = ["Thijs van den Berg <thijs@sitmo.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sitmo/volkit"
repository = "https://github.com/sitmo/volkit"
keywords = ["gaussian mixture", "implied", "volatility"]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "*"
scipy = "*"
pandas = "*"

# docs-only, marked optional
sphinx = { version = ">=7", optional = true }
myst-nb = { version = ">=1.1", optional = true }
furo = { version = ">=2024.8", optional = true }
sphinx-copybutton = { version = ">=0.5.2", optional = true }
matplotlib = { version = ">=3.8", optional = true }
matplotlib-inline = { version = ">=0.1.7", optional = true }
sphinx-autodoc-typehints = { version = ">=2.2", optional = true }

# --- development tools (installed via --with dev) ---
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7"
bump-my-version = "^1.2"
ruff = "^0.5"
black = "^24.0"
pytest = "^8.0"
pytest-cov = "^6.2"
coverage = "^7.10"
nbformat = "^5.1"
matplotlib = "^3.8"

[tool.poetry.extras]
docs = ["sphinx", "myst-nb", "furo", "sphinx-copybutton", "matplotlib", "matplotlib-inline", "pandas", "sphinx-autodoc-typehints"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
